--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,26 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<div class="container">
+  <div class="nav">
+    {{#link-to "index"}}
+      <h1>
+        Film/Foto collectie
+      </h1>
+    {{/link-to}}
+    <div class="links">
+      {{#link-to "collectie" class="menu-about"}}
+        Collectie
+      {{/link-to}}
+      {{#link-to "about" class="menu-contact"}}
+        Over ons
+      {{/link-to}}
+	  {{#link-to "opgeslagen" class="menu-contact"}}
+        Opgeslagen
+      {{/link-to}}
+	  {{#link-to "about" class="menu-contact"}}
+        Zoeken
+      {{/link-to}}
+    </div>
+  </div>
+  <div class="body">
+    {{outlet}}
+  </div>
+</div>
