--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -75,92 +75,367 @@ section {
 	flex-wrap: no-wrap;
 	justify-content: center;
 }
-/*
-input[type="text"] {
-	background: #fff;
-    width: 100%;
-    display: inline-block;
-    border: solid 1px #999;
+
+
+
+
+
+
+/*---------- Algemene stijl als het scherm breder is dan 53em  ----------*/
+
+@media only screen and (min-width: 53em) {
+    .ul_topmenu {
+        display: inline-block;
+        margin: 0.15em;
+    }
+    header li {
+        display: inline-block;
+        text-decoration: none;
+        text-align: center;
+        background-color: transparent;
+        padding: 0em;
+        margin: 0em;
+        margin-top: 1.6em;
+        border: 0px solid;
+        background-color: #31415f;
+        border-top: 3px solid;
+        border-top-color: #31415f;
+    }
+    header li:hover {
+        border-top: 3px solid;
+        border-top-color: #FAEA31;
+    }
+    header a {
+        text-decoration: none;
+        text-align: center;
+        color: white;
+        font-family: arial;
+        font-size: 0.5em;
+        padding: 0.8em;
+    }
+    header .logo {
+        float: left;
+        padding-top: 0em;
+    }
+    .menu__btn {
+        display: none;
+    }
+    
+    h2.subtitel{ 
+        font-family: 'Arima Madurai', cursive;
+        color:#717171;
+        font-size: 3em;
+        text-align: center;
+        margin-left: 20%;
+        margin-right: 20%;
+        margin-top:-1.5em;
+    }
+    
 }
 
 
-input:focus {
-    border: 2px solid orange;
-    border-color: orange !important;
+
+
+/*---------- Algemene stijl als het scherm smaller is dan 53em  (bijv. mobiel) -------*/
+
+@media only screen and (max-width: 53em) {
+    .ul_topmenu {
+        display: none;
+    }
+    header .logo {
+        margin: auto;
+        padding-top: 0em;
+    }
+    .menu__btn {
+        font-family: sans-serif;
+        ;
+        font-size: 1em;
+    }
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
+    
+    
+    
+    
+    /*--ANIMATIE 1 VOOR MENU --*/
+    
+    .menu__btn {
+        float: left;
+        background: none;
+        border: none;
+        padding: 2em 0.5em;
+        margin-left: 0.5em;
+        
+    }
+    .menu__label {
+        float: left;
+        writing-mode: vertical-lr;
+        font-size: 1.6em;
+        letter-spacing: 0.1em;
+        font-weight: bold;
+        color: #ffffff;
+        width: 0.625em;
+    }
+    .menu__title {
+        font-size: 1.9em;
+    }
+    .menu__container {
+        transition: all 0.4s 0.3s cubic-bezier(.4, 0, .17, 1);
+        transform: translateX(-20em);
+        padding: 1em;
+        color: white;
+        font-size: 1em;
+        top: 0;
+        left: 40%;
+        font-weight: bold;
+        text-align: left;
+        opacity: 0;
+        visibility: hidden;
+        position: absolute;
+        z-index: 10;
+    }
+    
+    .menu__list {
+        padding: 0;
+        margin-top: 2em;
+       z-index: 1;
+    }
+    .menu__item {
+        transition: all 0.2s;
+        list-style: none;
+        padding: 0;
+        width: 10em;
+        background-color: transparent;
+        color: #ffffff;
+        border: 0px;
+        text-align: left;
+        font-size: 0.5em;
+        z-index: 1;
+    }
+    .menu__item:hover {
+        color: yellow;
+    }
+    
+    .menu__item:before,
+    .menu__item:last-child:after {
+        content: '';
+        display: block;
+        width: 6em;
+        height: 0.1em;
+        background: hsla(0, 0%, 100%, 0.5);
+        margin: 1em;
+    }
+    
+    .menu__bg-layer {
+        transition: all 0.4s cubic-bezier(0.4, 0.0, 0.2, 1);
+        border-radius: 50%;
+        opacity: 0;
+        position: absolute;
+        transform: translate(-50%, -50%);
+        background: #1B1D3A;
+        height: 0;
+        width: 0;
+        z-index: 1;
+    }
+    
+    .menu__btn:hover .menu__container {
+        transform: translateX(0);
+        transition-delay: 0;
+        width: 100%;
+        visibility: visible;
+        opacity: 1;
+    }
+    
+    .menu__btn:hover .menu__bg-layer {
+        padding-bottom: 250%;
+        width: 250%;
+        opacity: 1;
+    }
+    
+    .menu__btn:hover .menu__bg-layer-2 {
+        background: lightblue;
+    }
+    
+    .menu__btn:hover .menu__bg-layer-1 {
+        transition-delay: 0.2s;
+    }
+    
+    button.verrasme{
+        display: none;
+    }
+    h2.subtitel{ 
+        font-family: 'Arima Madurai', cursive;
+        color:#717171;
+        font-size: 3em;
+        text-align: center;
+        margin-left: 20%;
+        margin-right: 20%;
+    }
 }
 
-h2 {
-    padding-top: 2em;
-    padding-bottom: 2em;
-    font-size: 2em !important;
-    font-weight: 200px !important;
-    font-family: work sans !important;
 
-}
+/*---------- Stijl voor de verhalen lijst (homepagina) ------------*/
 
-.container{
-    width:100%;
-    height: 50em;
+
+img.subtitelStreep{
+    width: 11em;
+    text-align: center;
+    margin: auto;
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
+    padding-bottom: 2em;
+}
+h2 {
+    font-family: 'Arima Madurai', cursive;
+    color:#717171;
+    font-size: 2.5em;
+}
 
-}
-.article {
-    font-family: nunito !important;
-    padding: 10em;
-}
 h3 {
-    padding-top: 1em;
-    font-size: 1.8em !important;
-    font-weight: bold !important;
-    font-family: work sans !important;
-
+    color: rgb(85, 86, 90);
+    font-style: normal;
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+    font-weight: 500;
+    margin-bottom: 0.3em;
+    text-align: center;  
 }
 
-.title {
-    font-size: 2em !important;
-    font-weight: bold !important;
-    font-family: work sans !important;
-    position: absolute;
-    border-bottom: 2px solid #db691c;
-    padding-bottom:-3em !important; 
+h3 img {
+    font-size: 2.2em;
+    display: flex;
+    margin: auto;
+    margin-bottom: 0.6em;
+    margin-top: 0.4em;   
 }
 
-p {
-    font-size: 1.3em;
-    padding-bottom: 1em;
+p  {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.more {
-color: #333 !important;
-text-decoration: none;
-font-weight: bold;
-text-transform: uppercase;
-font-size: .9rem;
-    font-family: 'Work Sans',sans-serif;
+ul {
+    list-style: none;
+    text-align: left;
 }
 
-.footer {
-    position: relative !important;
-    background-color: #262626;
-    height: 80px;
-    width: 100%;  
-    /*
-    margin-left:0;
-    margin-right:0;
-    margin-bottom: -40px;
-    
- 	right: 0;
-  	bottom: 0;
-  	left: 0;
-  	padding: 1rem;
-  	text-align: center;
+li {
+    border: 1px solid;
+    padding: 4em;
+    background-color: whitesmoke;
+    color: black;
 }
 
-.sectionimage {
-    height: 200px;
-    width: 100%;  
-    background-image:url('https://media.kadant.com/header-images/home%20page%20banner%20locator.jpg');
+li input[type="text"] {
+    width: 100%;
+    font-size: 1em;
+}
+
+li input[type="checkbox"] {
+    width: 100%;
+    font-size: 1em;
+}
+
+li textarea {
+    width: 100%;
+    font-size: 1em;
+}
+
+li input[type="submit"] {
+    width: 50%;
+    margin-left: 25%;
+    font-size: 1em;
+    background-color: cadetblue;
+    color: white;
+    border-radius: 0.2em;
+}
+
+ul {
     text-align: center;
+    font-family: sans-serif;
+    padding: 0.6em;
+    font-size: 3em;
+}
+
+section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+article {
+    border: 1px solid;
+    border-radius: 1em;
+    border-color: grey;
+    margin-right: 2em;
+    margin-bottom: 3em;
+    margin-left: 2em;
+    text-align: center;
+    width:30em;
+    font-weight: 300;
+    line-height: 2.2rem;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 5px 0px;
+    position: relative;
+    height:100%;
+    border-width: 0px 1px 1px;
+    border-style: solid solid solid;
+    border-color: rgb(232, 232, 232) rgb(232, 232, 232) rgb(232, 232, 232);
+    border-top: 0px;
+    border-radius: 14px 14px 8px 8px;
+    z-index: 0;
+}
+
+article img {
+    border-radius: 0.7em;
+    width: 30em;
+    height: 16em;
+    display: block;
+}
+
+article a {
+    font-weight: 700;
+    font-size: 1.0rem;
+    line-height: 2.5rem;
+    background-color: rgb(255, 230, 0);
+    box-shadow: rgb(222, 194, 4) 0px 2px 0px 0px, rgba(0, 0, 0, 0.2) 0px 3px 2px 0px;
+    background-clip: padding-box;
+    color: rgb(85, 86, 90);
+    cursor: pointer;
+    text-align: center;
+    text-transform: uppercase;
+    width: calc(100% - 28px);
+    position: absolute;
+    left: 14px;
+    border-radius: 4px;
+    text-decoration: none;
+}
+
+    
+article p {
+    text-align: center;
+    font-size: 1.7em;
+    color: darkgrey;
+    letter-spacing: 0.01em;
+    font-weight: 300;
+    line-height: 1.9rem;
+    padding: 0.5em;
+}
+
+
+
+
+/* ---------Stijl voor het hartje inkleuren -------------*/
+.harticoon {
+    width: 9em;
+    height: 8em;
+    font-size: 0.8em;
+    margin: auto;
+    padding-left: 5em;
+    display: inline;
+    padding-bottom: 2em;
+    padding-top: 8em;
 }
