--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -133,6 +133,45 @@ section {
     
 }
 
+.titelhomepagina{
+    width:100%;
+    height: 30em;
+    background-image: url();
+    background-size: cover; 
+    margin-bottom: 1em;
+    background-repeat: no-repeat;
+    padding-top: 2em;
+    background-position: center;
+    border-bottom: 6px solid #62C5D6;
+}
+
+/* h1 {
+    font-size: 3.5em;
+    text-align: left;
+    padding-top: 2em;
+    padding-left: 2em;
+    color: white;
+} */
+
+.titelhomepagina a {
+    font-weight: 700;
+    font-size: 0.8rem;
+    margin-left: 5em;
+    line-height: 2.5rem;
+    background-color: rgb(255, 230, 0);
+    box-shadow: rgb(222, 194, 4) 0px 2px 0px 0px, rgba(0, 0, 0, 0.2) 0px 3px 2px 0px;
+    color: rgb(85, 86, 90);
+    cursor: pointer;
+    height: 2.4em;
+    text-align: center;
+    text-transform: uppercase;
+    width: 16em;
+    padding: 0.6em 4em 0.6em 4em;
+    border-radius: 4px;
+    text-decoration: none;
+    transition: background-color 0.2s ease-out 0s;
+}
+
 
 
 
@@ -429,7 +468,7 @@ article p {
 
 
 /* ---------Stijl voor het hartje inkleuren -------------*/
-.harticoon {
+/* .harticoon {
     width: 9em;
     height: 8em;
     font-size: 0.8em;
@@ -438,4 +477,4 @@ article p {
     display: inline;
     padding-bottom: 2em;
     padding-top: 8em;
-}
+} */
