--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -132,35 +132,35 @@ section {
     }
     
 }
-
-.titelhomepagina{
+/*------------------------------------STIJL VOOR DIV OP DE HOMEPAGINA MET AFBEELDING------------------------------------------*/
+div.titelhomepagina{
     width:100%;
-    height: 30em;
-    background-image: url();
+    height: 20em;
+    background-image: url("/applicatie-filmliefhebbers/public/images/collecties.jpg"); 
+    background-color: lightgrey;
     background-size: cover; 
     margin-bottom: 1em;
     background-repeat: no-repeat;
     padding-top: 2em;
     background-position: center;
-    border-bottom: 6px solid #62C5D6;
+    border-bottom: 6px solid #00aaa0;
 }
 
-/* h1 {
-    font-size: 3.5em;
+ .titelhomepagina h1 {
+    font-size: 2em;
     text-align: left;
-    padding-top: 2em;
-    padding-left: 2em;
+    padding: 1em 0em 1em 2em;
     color: white;
-} */
+} 
 
 .titelhomepagina a {
     font-weight: 700;
     font-size: 0.8rem;
     margin-left: 5em;
     line-height: 2.5rem;
-    background-color: rgb(255, 230, 0);
-    box-shadow: rgb(222, 194, 4) 0px 2px 0px 0px, rgba(0, 0, 0, 0.2) 0px 3px 2px 0px;
-    color: rgb(85, 86, 90);
+    background-color: #00aaa0;
+    box-shadow: #00aaa0, rgba(0, 0, 0, 0.2) 0px 3px 2px 0px;
+    color: white;
     cursor: pointer;
     height: 2.4em;
     text-align: center;
@@ -415,6 +415,7 @@ article {
     margin-left: 2em;
     text-align: center;
     width:30em;
+    font-size: 1em;
     font-weight: 300;
     line-height: 2.2rem;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 5px 0px;
@@ -478,3 +479,26 @@ article p {
     padding-bottom: 2em;
     padding-top: 8em;
 } */
+
+/*----- functie om het favorietenhartje te vullen -----*/
+
+
+/*function hartjesvullen() {
+    if (hartjes =='leeg') {
+        hartjesImage.src = '../web/images/hartjeingekleurd.png';
+        hartjes = 'vol';
+        document.getElementById("likecount").innerHTML = "&#10122;";
+        document.getElementById("likecountSmall").innerHTML = "&#10122;";
+        return hartjes;
+    } else {
+        hartjesImage.src = '../web/images/hartjeicoon.png';
+        hartjes = 'leeg';
+        document.getElementById("likecount").innerHTML = "";
+        document.getElementById("likecountSmall").innerHTML = "";
+        return hartjes;
+    }
+
+}
+// var hartjes = 'leeg';
+// var hartjesImage = document.querySelector('.harticoon');
+// hartjesImage.addEventListener('click', hartjesvullen);*/
