--- a/app/templates/collectie.hbs
+++ b/app/templates/collectie.hbs
@@ -12,38 +12,33 @@
   Opgeslagen
   {{/link-to}}
 </div>
-{{#each this.model as |rental|}}
+
+{{#each this.model as |collectie|}}
 <h2>2019</h2>
 <section>
   <article>
-    <h3>{{rental.title}}</h3>
+    <h3>{{collectie.title}}</h3>
     <div>
-      <span>Owner:</span> {{rental.owner}}
+      <span>Owner:</span> {{collectie.cho}}
     </div>
     <div>
-      <span>Type:</span> {{rental.category}}
+      <span>Type:</span> {{collectie.desription}}
     </div>
-    <div>
-      <span>Location:</span> {{rental.city}}
-    </div>
-    <div>
-      <span>Number of bedrooms:</span> {{rental.bedrooms}}
+     <div>
+      <span>Location:</span> {{collectie.img}}
     </div>
     {{!-- <img class="harticoon" src="images/hartjeicoon.png" alt="like icoon2"> --}}
   </article>
   <article>
-    <h3>{{rental.title}}</h3>
+    <h3>{{collection.title}}</h3>
     <div>
-      <span>Owner:</span> {{rental.owner}}
+      <span>Owner:</span> {{collection.cho}}
     </div>
     <div>
-      <span>Type:</span> {{rental.category}}
+      <span>Beschrijving:</span> {{collectie.description}}
     </div>
     <div>
-      <span>Location:</span> {{rental.city}}
-    </div>
-    <div>
-      <span>Number of bedrooms:</span> {{rental.bedrooms}}
+      <span>afbeelding:</span> {{collectie.img}}
     </div>
     {{!-- <img class="harticoon" src="images/hartjeicoon.png" alt="like icoon2" onclick="hartjesvullen(this)"> --}}
   </article>
@@ -51,102 +46,61 @@
 <h2>2018</h2>
 <section>
   <article>
-
-    <h3>{{rental.title}}</h3>
+    <h3>{{collectie.title}}</h3>
     <div>
-      <span>Owner:</span> {{rental.owner}}
+      <span>Owner:</span> {{collectie.cho}}
     </div>
     <div>
-      <span>Type:</span> {{rental.category}}
+      <span>Type:</span> {{collectie.desription}}
     </div>
-    <div>
-      <span>Location:</span> {{rental.city}}
+     <div>
+      <span>Location:</span> {{collectie.img}}
     </div>
-    <div>
-      <span>Number of bedrooms:</span> {{rental.bedrooms}}
-    </div>
+    {{!-- <img class="harticoon" src="images/hartjeicoon.png" alt="like icoon2"> --}}
   </article>
   <article>
-
-    <h3>{{rental.title}}</h3>
+    <h3>{{collection.title}}</h3>
     <div>
-      <span>Owner:</span> {{rental.owner}}
+      <span>Owner:</span> {{collection.cho}}
     </div>
     <div>
-      <span>Type:</span> {{rental.category}}
+      <span>Beschrijving:</span> {{collectie.description}}
     </div>
     <div>
-      <span>Location:</span> {{rental.city}}
+      <span>afbeelding:</span> {{collectie.img}}
     </div>
-    <div>
-      <span>Number of bedrooms:</span> {{rental.bedrooms}}
-    </div>
+    {{!-- <img class="harticoon" src="images/hartjeicoon.png" alt="like icoon2" onclick="hartjesvullen(this)"> --}}
   </article>
 </section>
 <h2>2017</h2>
 <section>
   <article>
-
-    <h3>{{rental.title}}</h3>
+    <h3>{{collectie.title}}</h3>
     <div>
-      <span>Owner:</span> {{rental.owner}}
+      <span>Owner:</span> {{collectie.cho}}
     </div>
     <div>
-      <span>Type:</span> {{rental.category}}
+      <span>Type:</span> {{collectie.desription}}
     </div>
-    <div>
-      <span>Location:</span> {{rental.city}}
+     <div>
+      <span>Location:</span> {{collectie.img}}
     </div>
-    <div>
-      <span>Number of bedrooms:</span> {{rental.bedrooms}}
-    </div>
+    {{!-- <img class="harticoon" src="images/hartjeicoon.png" alt="like icoon2"> --}}
   </article>
   <article>
-
-    <h3>{{rental.title}}</h3>
+    <h3>{{collection.title}}</h3>
     <div>
-      <span>Owner:</span> {{rental.owner}}
+      <span>Owner:</span> {{collection.cho}}
     </div>
     <div>
-      <span>Type:</span> {{rental.category}}
+      <span>Beschrijving:</span> {{collectie.description}}
     </div>
     <div>
-      <span>Location:</span> {{rental.city}}
+      <span>afbeelding:</span> {{collectie.img}}
     </div>
-    <div>
-      <span>Number of bedrooms:</span> {{rental.bedrooms}}
-    </div>
-  </article>
-  <article>
-    <h3>{{rental.title}}</h3>
-    <div>
-      <span>Owner:</span> {{rental.owner}}
-    </div>
-    <div>
-      <span>Type:</span> {{rental.category}}
-    </div>
-    <div>
-      <span>Location:</span> {{rental.city}}
-    </div>
-    <div>
-      <span>Number of bedrooms:</span> {{rental.bedrooms}}
-    </div>
-  </article>
-  <article>
-    <h3>{{rental.title}}</h3>
-    <div>
-      <span>Owner:</span> {{rental.owner}}
-    </div>
-    <div>
-      <span>Type:</span> {{rental.category}}
-    </div>
-    <div>
-      <span>Location:</span> {{rental.city}}
-    </div>
-    <div>
-      <span>Number of bedrooms:</span> {{rental.bedrooms}}
-    </div>
+    {{!-- <img class="harticoon" src="images/hartjeicoon.png" alt="like icoon2" onclick="hartjesvullen(this)"> --}}
   </article>
 </section>
+
 {{/each}}
 {{outlet}}
