--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -136,7 +136,7 @@ section {
 div.titelhomepagina{
     width:100%;
     height: 20em;
-    background-image: url("/applicatie-filmliefhebbers/public/images/collecties.jpg"); 
+    background-image: url("/images/collecties.jpg"); 
     background-color: lightgrey;
     background-size: cover; 
     margin-bottom: 1em;
@@ -336,19 +336,11 @@ h2 {
 h3 {
     color: rgb(85, 86, 90);
     font-style: normal;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     line-height: 2.4rem;
     font-weight: 500;
     margin-bottom: 0.3em;
     text-align: center;  
-}
-
-h3 img {
-    font-size: 2.2em;
-    display: flex;
-    margin: auto;
-    margin-bottom: 0.6em;
-    margin-top: 0.4em;   
 }
 
 p  {
@@ -408,9 +400,9 @@ section {
 
 article {
     border: 1px solid;
-    border-radius: 1em;
+    border-radius: 0.5em;
     border-color: grey;
-    margin-right: 2em;
+    margin-right: 3em;
     margin-bottom: 3em;
     margin-left: 2em;
     text-align: center;
@@ -418,7 +410,7 @@ article {
     font-size: 1em;
     font-weight: 300;
     line-height: 2.2rem;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 5px 0px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
     position: relative;
     height:100%;
     border-width: 0px 1px 1px;
@@ -437,13 +429,13 @@ article img {
 }
 
 article a {
-    font-weight: 700;
+    font-weight: 200;
     font-size: 1.0rem;
     line-height: 2.5rem;
-    background-color: rgb(255, 230, 0);
-    box-shadow: rgb(222, 194, 4) 0px 2px 0px 0px, rgba(0, 0, 0, 0.2) 0px 3px 2px 0px;
+    background-color: #00aaa0;;
+    box-shadow: #00aaa0, rgba(0, 0, 0, 0.2) 0px 3px 2px 0px;
     background-clip: padding-box;
-    color: rgb(85, 86, 90);
+    color: white;
     cursor: pointer;
     text-align: center;
     text-transform: uppercase;
@@ -457,12 +449,12 @@ article a {
     
 article p {
     text-align: center;
-    font-size: 1.7em;
+    font-size: 1em;
     color: darkgrey;
     letter-spacing: 0.01em;
-    font-weight: 300;
-    line-height: 1.9rem;
-    padding: 0.5em;
+    font-weight: 200;
+    line-height: 1.5rem;
+    padding: 0.2em;
 }
 
 
