--- a/app/templates/collectie.hbs
+++ b/app/templates/collectie.hbs
@@ -17,88 +17,75 @@
 <h2>2019</h2>
 <section>
   <article>
+         <div>
+      <span><img src="{{collectie.img}}"></span>
+    </div>
     <h3>{{collectie.title}}</h3>
     <div>
-      <span>Owner:</span> {{collectie.cho}}
+      <span>Omschrijving</span> <p>{{collectie.description}}</p>
     </div>
-    <div>
-      <span>Type:</span> {{collectie.desription}}
-    </div>
-     <div>
-      <span>Location:</span> {{collectie.img}}
-    </div>
+      <span>Details:</span> <a href="{{collectie.cho}}">Lees meer</a>
     {{!-- <img class="harticoon" src="images/hartjeicoon.png" alt="like icoon2"> --}}
   </article>
   <article>
-    <h3>{{collection.title}}</h3>
-    <div>
-      <span>Owner:</span> {{collection.cho}}
+         <div>
+      <span><img src="{{collectie.img}}"></span>
     </div>
+    <h3>{{collectie.title}}</h3>
     <div>
-      <span>Beschrijving:</span> {{collectie.description}}
+      <span>Omschrijving</span> <p>{{collectie.description}}</p>
     </div>
-    <div>
-      <span>afbeelding:</span> {{collectie.img}}
-    </div>
-    {{!-- <img class="harticoon" src="images/hartjeicoon.png" alt="like icoon2" onclick="hartjesvullen(this)"> --}}
+      <span>Details:</span> <a href="{{collectie.cho}}">Lees meer</a>
+    {{!-- <img class="harticoon" src="images/hartjeicoon.png" alt="like icoon2"> --}}
   </article>
 </section>
 <h2>2018</h2>
 <section>
   <article>
+         <div>
+      <span><img src="{{collectie.img}}"></span>
+    </div>
     <h3>{{collectie.title}}</h3>
     <div>
-      <span>Owner:</span> {{collectie.cho}}
+      <span>Omschrijving</span> <p>{{collectie.description}}</p>
     </div>
-    <div>
-      <span>Type:</span> {{collectie.desription}}
-    </div>
-     <div>
-      <span>Location:</span> {{collectie.img}}
-    </div>
+      <span>Details:</span> <a href="{{collectie.cho}}">Lees meer</a>
     {{!-- <img class="harticoon" src="images/hartjeicoon.png" alt="like icoon2"> --}}
   </article>
   <article>
-    <h3>{{collection.title}}</h3>
-    <div>
-      <span>Owner:</span> {{collection.cho}}
+         <div>
+      <span><img src="{{collectie.img}}"></span>
     </div>
+    <h3>{{collectie.title}}</h3>
     <div>
-      <span>Beschrijving:</span> {{collectie.description}}
+      <span>Omschrijving</span> <p>{{collectie.description}}</p>
     </div>
-    <div>
-      <span>afbeelding:</span> {{collectie.img}}
-    </div>
-    {{!-- <img class="harticoon" src="images/hartjeicoon.png" alt="like icoon2" onclick="hartjesvullen(this)"> --}}
+      <span>Details:</span> <a href="{{collectie.cho}}">Lees meer</a>
+    {{!-- <img class="harticoon" src="images/hartjeicoon.png" alt="like icoon2"> --}}
   </article>
 </section>
 <h2>2017</h2>
 <section>
   <article>
+    <div>
+      <span><img src="{{collectie.img}}"></span>
+    </div>
     <h3>{{collectie.title}}</h3>
     <div>
-      <span>Owner:</span> {{collectie.cho}}
+      <span>Omschrijving</span> <p>{{collectie.description}}</p>
     </div>
-    <div>
-      <span>Type:</span> {{collectie.desription}}
-    </div>
-     <div>
-      <span>Location:</span> {{collectie.img}}
-    </div>
-    {{!-- <img class="harticoon" src="images/hartjeicoon.png" alt="like icoon2"> --}}
+      <span>Details:</span> <a href="{{collectie.cho}}">Lees meer</a>
   </article>
+
   <article>
-    <h3>{{collection.title}}</h3>
-    <div>
-      <span>Owner:</span> {{collection.cho}}
+         <div>
+      <span><img src="{{collectie.img}}"></span>
     </div>
+    <h3>{{collectie.title}}</h3>
     <div>
-      <span>Beschrijving:</span> {{collectie.description}}
+      <span>Omschrijving</span> <p>{{collectie.description}}</p>
     </div>
-    <div>
-      <span>afbeelding:</span> {{collectie.img}}
-    </div>
-    {{!-- <img class="harticoon" src="images/hartjeicoon.png" alt="like icoon2" onclick="hartjesvullen(this)"> --}}
+      <span>Details:</span> <a href="{{collectie.cho}}">Lees meer</a>
   </article>
 </section>
 
