--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,10 +1,17 @@
 <div class="jumbo">
-  <div class="right tomster"></div>
-  <h2>Welcome!</h2>
-  <p>We hope you find exactly what you're looking for in a place to stay.</p>
-  {{#link-to "collectie" class="button"}}
-    Collectie
-  {{/link-to}}
+  {{!-- <div class="right tomster"></div> --}}
+  <section class="overons">
+     <h2>Over ons!</h2>
+ 
+
+
+<p>Deze website toont de collecties van de Stichting Nationaal Museum van Wereldculturen. Het Tropenmuseum, het Afrika Museum en Museum Volkenkunde) en die van het Wereldmuseum Rotterdam. Samen telt deze bijna 450.000 voorwerpen 260.000 fotografische beelden die behoren tot de rijks- of gemeentelijke collectie, en daarnaast zo'n 350.000 stuks documentair beeldmateriaal. Wat anders is dan de gewone website van het nmwc is dat deze website gefocust is op de geschiedenis van film en fotografie. Hier vind je dus alle voorwerpen die te maken hebben met film en fotografie.</p>
+
+ 
+<p> Op de website kunt u selecties van objecten bewaren in opgeslagen collecties. Afbeeldingen uit de gehele collectie kunnen op bestelling in hoge resolutie geleverd worden via de webshop. Hiervoor is een account nodig dat u zelf kunt aanmaken.
+Eenmaal ingelogd kunt u objecten toevoegen aan uw persoonlijke winkelwagen. </p><a class="overons" href="https://www.afrikamuseum.nl/nl/themas/onze-collectie-1?gclid=Cj0KCQjw6eTtBRDdARIsANZWjYaDdzuJw6gfUXT65gssgV_yT2V9FASpszgdB04drYlTOWh2ZV4CmXQaAhKsEALw_wcB">NMWC</a>
+
+</section>
 </div>
 
 {{outlet}}
