--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -13,10 +13,10 @@
             <div class="menu__container">
                 <span class="menu__title">Menu</span>
                 <ul class="menu__list">
-                    <li class="menu__item"><a href="index.html">Collectie</a></li>
-                    <li class="menu__item"><a href="Voorjou.html">Over ons</a></li>
-                    <li class="menu__item"><a href="download.html">Opgeslagen<span id="dllinkSmall" class="dllink"></span></a></li>
-                    <li class="menu__item"><a href="">Zoeken<span id="likecountSmall" class="likecount"></span></a></li>
+                    <li class="menu__item"><a href="collectie.hbs">Collectie</a></li>
+                    <li class="menu__item"><a href="about.hbs">Over ons</a></li>
+                    <li class="menu__item"><a href="opgeslagen.hbs">Opgeslagen<span id="dllinkSmall" class="dllink"></span></a></li>
+                    <li class="menu__item"><a href="list-filter">Zoeken<span id="likecountSmall" class="likecount"></span></a></li>
                 </ul>
             </div>
         </div>
