--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,7 +2,7 @@
   <div class="nav">
     {{#link-to "index"}}
     <a href="collectie.hbs" class= "logo">
-      Film/Foto collectie
+      Film&Foto collectie
     </a>
     <button class="menu__btn">
         <span class="menu__label">MENU</span>
@@ -35,6 +35,7 @@
       {{#link-to "about" class="menu-contact"}}
       Zoeken
       {{/link-to}}
+      
     </div>
   </div>
   {{!-- <div class="body">
