--- a/app/templates/collectie.hbs
+++ b/app/templates/collectie.hbs
@@ -14,35 +14,18 @@
               <legend>Genre</legend>
             <ul>
                 <li>
-                    <label><input type="checkbox" name="stars" value="1" checked="checked" /> Agressief</label>
+                    <label><input type="checkbox" name="stars" value="1" checked="checked" /> Camera's</label>
                 </li>
                <li> 
-                   <label><input type="checkbox" name="stars" value="3" checked="checked" /> Drama</label></li>
+                   <label><input type="checkbox" name="stars" value="3" checked="checked" /> Foto's</label></li>
                 <li>
-                    <label><input type="checkbox" name="stars" value="5" checked="checked" /> Humor</label>
+                    <label><input type="checkbox" name="stars" value="5" checked="checked" /> Foto tassen</label>
                 </li>
                 <li>
-                    <label><input type="checkbox" name="stars" value="1" checked="checked" /> Liefde</label>
+                    <label><input type="checkbox" name="stars" value="1" checked="checked" /> Technische onderdelen</label>
                 </li>
                 <li>
-                    <label><input type="checkbox" name="stars" value="3" checked="checked" /> Somber</label></li>
-                <li>
-                    <label><input type="checkbox" name="stars" value="5" checked="checked" /> Spanning</label>
-                </li>
-            </ul>
-            </fieldset>
-            <fieldset>
-            <legend>Lengte verhaal</legend>
-            <ul>
-                <li>
-                <label><input type="checkbox" name="lengte" value="1" checked="checked" /> Kort</label>
-                </li>
-                <li>
-                    <label><input type="checkbox" name="lengte" value="3" checked="checked" /> Middel</label>
-                </li>
-                <li>
-                    <label><input type="checkbox" name="lengte" value="5" checked="checked" /> Lang</label>
-                </li>
+                    <label><input type="checkbox" name="stars" value="3" checked="checked" /> Zwart-wit</label></li>
 
             </ul>
             </fieldset>
@@ -50,16 +33,16 @@
               <legend>Sorteren</legend>
             <ul>
                 <li>
-                    <label><input type="checkbox" name="sorteren" value="1" checked="checked" /> Van A tot Z</label>
+                    <label><input type="checkbox" name="sorteren" value="1" checked="checked" /> 2000-nu</label>
                 </li>
                 <li>
-                    <label><input type="checkbox" name="sorteren" value="3" checked="checked" /> Van Z tot A</label>
+                    <label><input type="checkbox" name="sorteren" value="3" checked="checked" /> 1800-2000</label>
                 </li>
                 <li>
-                    <label><input type="checkbox" name="sorteren" value="5" checked="checked" /> Van kort naar lang</label>
+                    <label><input type="checkbox" name="sorteren" value="5" checked="checked" /> 1400-1800</label>
                 </li>
                 <li>
-                    <label><input type="checkbox" name="sorteren" value="5" checked="checked" /> Van lang naar kort
+                    <label><input type="checkbox" name="sorteren" value="5" checked="checked" /> 1400 en ouder
                 </label></li>
             </ul>
          </fieldset>
